--- a/Dockerfile.scanner-nvd
+++ b/Dockerfile.scanner-nvd
@@ -1,11 +1,11 @@
-FROM golang:1.23.0 AS builder
+FROM --platform=${BUILDPLATFORM:-linux/amd64} golang:1.23.0 AS builder
 
 WORKDIR /go/src/github.com/cloudoperators/heureka
 
 ADD . .
 RUN CGO_ENABLED=0 go build -o /go/bin/heureka-scanner-nvd scanner/nvd/main.go
 
-FROM gcr.io/distroless/static-debian12:nonroot
+FROM --platform=${BUILDPLATFORM:-linux/amd64} gcr.io/distroless/static-debian12:nonroot
 
 LABEL source_repository="https://github.com/cloudoperators/heureka"
 LABEL source_folder="scanner/nvd"
