--- a/scanner/nvd/Dockerfile
+++ b/scanner/nvd/Dockerfile
@@ -2,7 +2,7 @@ FROM --platform=${BUILDPLATFORM:-linux/amd64} golang:1.23.3 AS builder
 
 WORKDIR /go/src/github.com/cloudoperators/heureka/scanner/nvd
 
-ADD ../.. .
+ADD . .
 RUN CGO_ENABLED=0 go build -o /go/bin/heureka-scanner-nvd main.go
 
 FROM --platform=${BUILDPLATFORM:-linux/amd64} gcr.io/distroless/static-debian12:nonroot
