--- a/scanner/nvd/chart/nvd-scanner/templates/secrets.yaml
+++ b/scanner/nvd/chart/nvd-scanner/templates/secrets.yaml
@@ -8,3 +8,4 @@ metadata:
 type: Opaque
 data:
   api_token: {{ .Values.scanner.api_token | b64enc }}
+  nvd_api_key: {{ .Values.scanner.nvd_api_key | b64enc }}
