feat: implement scanner runs and querying them (#498)
* Add dependency to gqlgen for targets test-db, test-app and test-e2e

* Add ScannerRun table

* Add/modify tables for ScannerRun and ScannerRunIssueTracker

* Add uuid to ScannerRun

* Add 'tag' to ScannerRun

* Use size of 255 for varchar fields instead of 256

* Make UUID unique

* Align SQL schema and ScannerRun with project conventions

* Add serialization/deserialization from/to ScannerRun

* Adapt ScannerRun table to heureka naming conventions

* Create an instance of ScannerRun in the database

* Fix persistance for ScannerRun and add entities for app layer

* Add skeleton for ScannerRun on the app layer

* First test for ScannerRun create

* Add licence header

* Add first draft of graphql api definition for ScannerRun

* Add supporting code to create a new ScannerRun via GraphQL

* Models for graphql for creating ScannerRun entities

* Add e2e test to create a ScannerRun

* Fix e2e test for creating ScannerRun

* Add ginkgo tools to devcontainer and install Golang tools we use in Makefile

* Add CompleteScannerRun method to SqlDatabase

* Use UUID to mark a scannerrun as complete

* Add UpdateScannerRun to the ScannerRunHandler

* Make ScannerRunUpdate work up to the graphql API

* Implement protocol for ScannerRun in Keppel scanner

* Automatic application of license header

* Simplify CreateScannerRun GraphQL interface and do not expose database internal

* Modify keppel createScannerRun.graphql

* Fix e2e test for ScannerRun

* Add ScannerRunByUUID method to database

* Add a table for ScannerRun error messages

* Add FailScannerRun method to db

* Add/fix test on app level for complete/fail server run and graphql mutations

* Add test for ScannerRun Complete/Failure mutations via graphql

* Add documentation for the scanner run protocl

* Add very naive implementation for GetScannerRuns

* Add additional tests for GetScannerRuns

* Privilege escalation

* Add ensureScannerRunFilter method

* Add Sca

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,20 @@
 # SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Greenhouse contributors
 # SPDX-License-Identifier: Apache-2.0
 
-FROM mcr.microsoft.com/devcontainers/go
+FROM golang
+
+ARG USERNAME=vscode
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME -s /bin/bash \
+    && apt-get update \
+    && apt-get install -y sudo silversearcher-ag vim-nox autojump aspell aspell-en \
+    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+    && chmod 0440 /etc/sudoers.d/$USERNAME
+
+USER $USERNAME
 
 WORKDIR /go/src/github.com/cloudoperators/heureka
 ADD . .
