feat(vulnerability): add vulnerability queries (#734)
* feat(vulnerability): add vulnerability api query

* feat(vulnerability): sort services by name

* fix pr comments

* fix pr comments

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -198,6 +198,22 @@ models:
         resolver: true
       services:
         resolver: true
+  Vulnerability:
+    fields:
+      services:
+        resolver: true
+      sourceUrl:
+        resolver: true
+      severity:
+        resolver: true
+      earliestTargetRemediationDate:
+        resolver: true
+  VulnerabilityFilterValue:
+    fields:
+      supportGroup:
+        resolver: true
+      severity:
+        resolver: false
   IssueMatchFilterValue:
     fields:
       status:
