feat(vulnerability): add Service filter #764 part1
On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -214,6 +214,8 @@ models:
         resolver: true
       severity:
         resolver: false
+      service:
+        resolver: true
   IssueMatchFilterValue:
     fields:
       status:
