feat(vulnerability): add SupportGroup #764 (#790)
On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -208,6 +208,8 @@ models:
         resolver: true
       earliestTargetRemediationDate:
         resolver: true
+      supportGroups:
+        resolver: true
   VulnerabilityFilterValue:
     fields:
       supportGroup:
